--- a/PrivateDatabase/App.entitlements
+++ b/PrivateDatabase/App.entitlements
@@ -6,7 +6,15 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.example.private-database</string>
+		<string>iCloud.com.circles.app</string>
+	</array>
+	<key>com.apple.developer.ubiquity-container-identifiers</key>
+	<array>
+		<string>iCloud.com.circles.app</string>
+	</array>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.circles.app</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
