refactor: rename project from PrivateDatabase to Circles
Complete project-wide renaming to better reflect the app's purpose:

- Rename source folder: PrivateDatabase/ → Circles/
- Rename Xcode project: PrivateDatabase.xcodeproj → Circles.xcodeproj
- Rename scheme: PrivateDatabase.xcscheme → Circles.xcscheme
- Update all target names and product names
- Update bundle identifier: com.example.private-database → com.example.circles
- Update test target name: PrivateDatabaseTests → CirclesTests
- Update test imports: @testable import PrivateDatabase → Circles
- Fix TEST_HOST paths for unit tests
- Create .xccurrentversion file for Core Data model
- Update all internal project references

All 65 tests passing after rename:
- ContactTests: 10 ✅
- DataManagerTests: 10 ✅
- CloudKitSyncMonitorTests: 21 ✅
- SharedDataManagerTests: 13 ✅
- ContactsViewModelTests: 15 ✅
- SampleDataGeneratorTests: 9 ✅

App now properly named 'Circles' throughout the codebase.

--- a/Circles.xcodeproj/xcshareddata/xcschemes/Circles.xcscheme
+++ b/Circles.xcodeproj/xcshareddata/xcschemes/Circles.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "89EAB87425880274004264D2"
-               BuildableName = "PrivateDatabase.app"
-               BlueprintName = "PrivateDatabase"
-               ReferencedContainer = "container:PrivateDatabase.xcodeproj">
+               BuildableName = "Circles.app"
+               BlueprintName = "Circles"
+               ReferencedContainer = "container:Circles.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "89EAB88525880278004264D2"
-               BuildableName = "PrivateDatabaseTests.xctest"
-               BlueprintName = "PrivateDatabaseTests"
-               ReferencedContainer = "container:PrivateDatabase.xcodeproj">
+               BuildableName = "CirclesTests.xctest"
+               BlueprintName = "CirclesTests"
+               ReferencedContainer = "container:Circles.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "89EAB87425880274004264D2"
-            BuildableName = "PrivateDatabase.app"
-            BlueprintName = "PrivateDatabase"
-            ReferencedContainer = "container:PrivateDatabase.xcodeproj">
+            BuildableName = "Circles.app"
+            BlueprintName = "Circles"
+            ReferencedContainer = "container:Circles.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "89EAB87425880274004264D2"
-            BuildableName = "PrivateDatabase.app"
-            BlueprintName = "PrivateDatabase"
-            ReferencedContainer = "container:PrivateDatabase.xcodeproj">
+            BuildableName = "Circles.app"
+            BlueprintName = "Circles"
+            ReferencedContainer = "container:Circles.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
